bug squishin!

--- a/src/Styles/global.scss
+++ b/src/Styles/global.scss
@@ -25,7 +25,7 @@ body {
 
 // Headings
 h1, h2, h3, h4, h5, h6 {
-  color: $info-color;
+  color: $success-color;
 }
 
 h1 {
